--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "css-loader": "^6.6.0",
     "eslint": "^8.44.0",
     "eslint-config-memcrab": "^2.0.3",
+    "eslint-plugin-i18next": "^5.1.2",
     "eslint-plugin-jsdoc": "^46.4.3",
     "eslint-plugin-only-warn": "^1.1.0",
     "eslint-plugin-prettier": "^4.2.1",
