Add error boundary

--- a/.eslintrc
+++ b/.eslintrc
@@ -26,6 +26,7 @@
         ]
       }
     ],
-    "@typescript-eslint/consistent-type-imports": "off"
+    "@typescript-eslint/consistent-type-imports": "off",
+    "jsdoc/require-jsdoc": "off"
   }
 }
