--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@getify/eslint-plugin-proper-arrows": "^11.0.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
     "@svgr/webpack": "^6.2.1",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
@@ -39,6 +41,7 @@
     "eslint": "^8.44.0",
     "eslint-config-memcrab": "^2.0.3",
     "eslint-plugin-i18next": "^5.1.2",
+    "eslint-plugin-jest-dom": "^5.0.1",
     "eslint-plugin-jsdoc": "^46.4.3",
     "eslint-plugin-no-loops": "^0.3.0",
     "eslint-plugin-only-warn": "^1.1.0",
@@ -48,9 +51,11 @@
     "eslint-plugin-react-perf": "^3.3.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "mini-css-extract-plugin": "^2.5.3",
     "react-refresh": "^0.10.0",
+    "regenerator-runtime": "^0.13.9",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
